fixed gap and scrolling issues

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -43,7 +43,7 @@
   opacity: 100%;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 672px) {
   .card__image {
     width: 288px;
     height: 288px;
