--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -75,11 +75,13 @@
   opacity: 80%;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 672px) {
   .profile {
     width: 288px;
     flex-direction: column;
     align-items: center;
+    padding-top: 0;
+    margin-top: 18px;
   }
 
   .profile__column {
@@ -100,10 +102,12 @@
   }
 
   .profile__edit-btn {
-    margin: 20px 0 0 0;
+    margin: 32px 0 0 0;
   }
 
   .profile__new-btn {
     margin: 20px auto auto;
+    width: 288px;
+    justify-content: center;
   }
 }
